--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -23,7 +23,7 @@ RUN apt update && apt install -y \
 	php8-redis\
 	php8-session\
 	php8-xml\
-	php8-zip
+	php8-zip \
 && apt clean
 
 # Create the www user
