--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:buster
 
-RUN apt update && apt add installe - y \
+RUN apt update && apt install - y \
 	mariadb-server \
 	procps \
 	top \
