--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -21,7 +21,9 @@ RUN openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
 	-subj "/C=FR/ST=Ile-de-France/L=Paris/O=42Inc/OU=42School/CN=tpouget"
 
 # Add the custom nginx configuration file
-COPY ./conf/tpouget.42.fr.conf /etc/nginx/http.d/
+#COPY ./conf/tpouget.42.fr.conf /etc/nginx/http.d/
+RUN	rm /etc/nginx/nginx.conf
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
 # Set the entrypoint on the port 443
 EXPOSE 443
