--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,3 +1,4 @@
+# CUSTOM CONF FILE
 # This group is read both both by the client and the server
 # use it for options that affect everything
 [client-server]
@@ -16,3 +17,4 @@ symbolic-links=0
 
 # include all files from the config directory
 !includedir /etc/my.cnf.d
+# CUSTOM CONF FILE
