--- a/srcs/requirements/mariadb/conf/mariadb-server.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb-server.cnf
@@ -1,4 +1,4 @@
-#
+# CUSTOM CONFIG
 # These groups are read by MariaDB server.
 # Use it for options that only the server (but not clients) should see
 
@@ -39,3 +39,4 @@ bind-address=0.0.0.0
 # If you use the same .cnf file for MariaDB of different versions,
 # use this group for options that older servers don't understand
 [mariadb-10.5]
+# CUSTOM CONF FILE
