--- a/srcs/.env
+++ b/srcs/.env
@@ -9,12 +9,12 @@ WP_ADMIN_EMAIL=contact@tpouget.42.fr
 
 # WORDPRESS SECOND USER
 WP_USER=utilisateur
-WP_USER_PASSORD=eWV2G0GmNQoD5YsP7I6PyFg6nMZCLVr
-WP_USER_EMAIL=user@charles-mariot.fr
+WP_USER_PASSWORD=eWV2G0GmNQoD5YsP7I6PyFg6nMZCLVr
+WP_USER_EMAIL=user@gmail.com
 
 # MARIADB
-MYSQL_DB_HOST=mariadb:3306
+MYSQL_DATABASE_HOST=mariadb:3306
 MYSQL_USER=mariadb_db
 MYSQL_PASSWORD=5nC4H9N97nWQKQkJtuAqvMRizZKnOyG
 MYSQL_DATABASE=wordpress
-MYSQL_DB_PREFIX=wp_
+MYSQL_DATABASE_PREFIX=wp_
