--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,12 +5,19 @@ services:
 
   mariadb:
     #container_name: mariadb
-    build: requirements/mariadb
+    env_file: .env
+    build: 
+      context : requirements/mariadb
+      args:
+      - MYSQL_DATABASE_HOST
+      - MYSQL_USER
+      - MYSQL_PASSWORD
+      - MYSQL_DATABASE
+      - MYSQL_DATABASE_PREFIX
     #image: mariadb:inception
     volumes:
       - /home/tpouget/data/mariadb:/var/lib/mysql
       #- mariadb_volume:/var/lib/mysql
-    env_file: .env
     #networks:
     #  - docker_network
     #restart: on-failure
