Bash is becoming less frightening

--- a/srcs/.env
+++ b/srcs/.env
@@ -13,7 +13,7 @@ WP_USER_PASSWORD=eWV2G0GmNQoD5YsP7I6PyFg6nMZCLVr
 WP_USER_EMAIL=user@gmail.com
 
 # MARIADB
-MYSQL_DATABASE_HOST=mariadb:3306
+MYSQL_DATABASE_HOST=mariadb
 MYSQL_USER=mariadb_db
 MYSQL_PASSWORD=5nC4H9N97nWQKQkJtuAqvMRizZKnOyG
 MYSQL_DATABASE=wordpress
