--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,7 +7,7 @@ http {
 
 		server_name			tpouget.42.fr www.tpouget.42.fr;
 
-		#listen				80;
+		listen				80;
 		listen				443 ssl http2;
 		listen				[::]:443 ssl http2;
 
@@ -38,7 +38,7 @@ http {
 			try_files $uri $uri/ /index.php?$args;
 		}
 
-		location ~ \.php$ {
+		location ~\.php$ {
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			fastcgi_pass wordpress:9000;
 			fastcgi_index index.php;
@@ -47,7 +47,7 @@ http {
 			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		}
 
-		location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+		location ~*\.(js|css|png|jpg|jpeg|gif|ico)$ {
 			expires max;
 			log_not_found off;
 		}
