Tried chdir for php-fpm and nginx logs to stdout

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
-user       www www;  
+user       www-data www-data;  
 #user       root root;  
 
 events {
@@ -21,8 +21,8 @@ http {
 		ssl_certificate		/ssl/tpouget.42.fr.pem;
 		ssl_certificate_key	/ssl/tpouget.42.fr.key;
 
-		access_log			/log/tpouget.42.fr.access.log;
-		error_log			/log/tpouget.42.fr.error.log;
+		access_log			stdout;
+		error_log			stderr;
 
 		error_page			500 502 503 504 /50x.html;
 
@@ -41,7 +41,7 @@ http {
 			try_files $uri $uri/ /index.php?$args;
 		}
 
-		location ~\.php$ {
+		location ~ \.php$ {
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
 			fastcgi_pass wordpress:9000;
 			fastcgi_index index.php;
