--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,7 +1,7 @@
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
-[www]
+[www-data]
 
 ; Per pool prefix
 ; It only applies on the following directives:
@@ -273,7 +273,7 @@ pm.max_spare_servers = 3
 
 ; The access log file
 ; Default: not set
-;access.log = log/php7.3/$pool.access.log
+access.log = /proc/self/fd/1
 
 ; The access log format.
 ; The following syntax is allowed
@@ -450,6 +450,6 @@ decorate_workers_output = no
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/php7.3/$pool.error.log
+;php_admin_value[error_log] = st
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
