--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,6 +1,5 @@
 # ./tools/wordpress_install.sh	/
 # ./conf/www.conf
-# ./conf/php.ini
 
 FROM debian:buster
 
@@ -20,25 +19,29 @@ RUN apt update && apt install -y \
 # Create the www-data user
 RUN id www-data || useradd www-data 
 
-RUN mkdir -p /var/www/wordpress \
-	&& chown www-data:www-data /var/www/wordpress
+#RUN mkdir -p /var/www/wordpress \
+#    && chown www-data:www-data /var/www/wordpress
 
-# Copy php config files
+# Copy php pool/user specific config file
 COPY ./conf/www.conf	/etc/php/7.3/fpm/pool.d/
-COPY ./conf/php.ini		/etc/php/7.3/fpm
 
 # Copy the wordpress installation script
 COPY ./tools/wordpress_install.sh	/
 RUN chmod +x /wordpress_install.sh
 
+# Because that's where the pid file of php-fpm lives by default
+# and it does not exist. Global setting, could be changed in /etc/php/7.3/fpm/php-fpm.conf
 RUN mkdir /run/php
 
 # Expose the port 9000
 EXPOSE 9000
 
-RUN ln -sf /dev/stdout /var/log/php7.3-fpm.log  && ln -sf /dev/stderr /var/log/php7.3-fpm.log 
+# Redirect logs to stdout and stderr
+# Because access.log and error_log are global settings and I can't be bothered to change them
+# stderr because stdout redirection does not work though
+RUN ln -sf /dev/stderr /var/log/php7.3-fpm.log 
+
 # Install wp and run php
 ENTRYPOINT ["/wordpress_install.sh"]
 CMD ["php-fpm7.3", "--nodaemonize", "--allow-to-run-as-root"]
-#CMD ["php-fpm7.3", "--nodaemonize"]
 #CMD ["su", "www-data", "-c", "php-fpm7.3 --nodaemonize"]
