--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -16,9 +16,12 @@ RUN mkdir -p /var/www/wordpress/\
 	&& chown -R www-data:www-data /var/lib/nginx /var/www/wordpress/
 
 # Generate self-signed key/certificate pair
-RUN openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
-	-out /ssl/tpouget.42.fr.pem \
-	-keyout /ssl/tpouget.42.fr.key \
+# -x509 generates certificates instead of certificate request
+# -nodes --> No DES, deprecated on newer versions for -noenc (No encrytion)
+# -new prompts for key info unless provided by -newkey
+RUN openssl req -new -newkey rsa:4096 -x509 -days 365 -nodes \
+	-out /etc/ssl/tpouget.42.fr.pem \
+	-keyout /etc/ssl/tpouget.42.fr.key \
 	-subj "/C=FR/ST=Ile-de-France/L=Paris/O=42Inc/OU=42School/CN=tpouget"
 
 # Add the custom nginx configuration file
@@ -26,12 +29,7 @@ RUN openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
 RUN	rm /etc/nginx/nginx.conf
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
-# Make log files symbolic links to stdout and stderr
-#RUN ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
-
-# Set the entrypoint on the port 443
 EXPOSE 443
 
-# Launch the webserver
 ENTRYPOINT ["nginx"]
 CMD ["-g", "daemon off;"]
