--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,8 +17,8 @@ http {
 		index				index.php index.html;
 
 		ssl_protocols		TLSv1.2 TLSv1.3;
-		ssl_certificate		/ssl/tpouget.42.fr.pem;
-		ssl_certificate_key	/ssl/tpouget.42.fr.key;
+		ssl_certificate		/etc/ssl/tpouget.42.fr.pem;
+		ssl_certificate_key	/etc/ssl/tpouget.42.fr.key;
 
 		access_log			stdout;
 		error_log			stderr;
