--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,4 @@
 user       www-data www-data;  
-#user       root root;  
 
 events {
 
@@ -10,6 +9,8 @@ http {
 
 		server_name			tpouget.42.fr www.tpouget.42.fr;
 
+		# ssl -> Enforce ssl connections else it's just another port
+		# http2 -> Better compat with old clients when ssl is on
 		listen				443 ssl http2;
 		listen				[::]:443 ssl http2;
 
