Removed a chown in nginx Docker file

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -11,7 +11,7 @@ RUN id www-data || useradd www-data
 
 # Create a directory for html files
 RUN mkdir -p /var/www/wordpress/\
-	&& chown -R www-data:www-data /var/lib/nginx /var/www/wordpress/
+	&& chown -R www-data:www-data /var/www/wordpress/
 
 # Generate self-signed key/certificate pair
 # -x509 generates certificates instead of certificate request
