--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -6,13 +6,19 @@ listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
 
+;mandatory values
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 
-access.log = /proc/self/fd/1
-chdir = /var/www/wordpress
-catch_workers_output = yes
-decorate_workers_output = no
+; Redirection to stderr, stdout does not work
+; Both those options work but the first one seems better
+;access.log = /proc/self/fd/2
+;access.log = /dev/stderr
+
+; Tried these options but they did not seem change anything
+;chdir = /var/www/wordpress
+;catch_workers_output = yes
+;decorate_workers_output = yes
