--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -15,7 +15,7 @@ pm.max_spare_servers = 3
 
 ; Redirection to stderr, stdout does not work
 ; Both those options work but the first one seems better
-;access.log = /proc/self/fd/2
+access.log = /proc/self/fd/2
 ;access.log = /dev/stderr
 
 ; Tried these options but they did not seem change anything
