About to check if redis works

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,16 +4,15 @@ SITE_URL=https://tpouget.42.fr
 
 # WORDPRESS ADMIN USER
 WP_ADMIN_USER=tpouget
-WP_ADMIN_PASSWORD=E72sX9nQIWhFAc6zjkvQmMJphYxVuqu
-WP_ADMIN_EMAIL=contact@tpouget.42.fr
+WP_ADMIN_PASSWORD=correcthorsebatterystaple
+WP_ADMIN_EMAIL=tpouget@student.42.fr
 
 # WORDPRESS SECOND USER
-WP_USER=utilisateur
-WP_USER_PASSWORD=eWV2G0GmNQoD5YsP7I6PyFg6nMZCLVr
-WP_USER_EMAIL=user@gmail.com
+WP_USER=justauser
+WP_USER_PASSWORD=change_your_password_asap
+WP_USER_EMAIL=justauser@gmail.com
 
 # MARIADB
-MYSQL_DATABASE_HOST=mariadb
-MYSQL_USER=mariadb_db
-MYSQL_PASSWORD=5nC4H9N97nWQKQkJtuAqvMRizZKnOyG
+MYSQL_USER=wordpress
+MYSQL_PASSWORD=6nE4F9N9GnWQ0pkJtuAgvMRiIZK9Oyr
 MYSQL_DATABASE=wordpress
