--- a/srcs/.env
+++ b/srcs/.env
@@ -13,6 +13,6 @@ WP_USER_PASSWORD=change_your_password_asap
 WP_USER_EMAIL=justauser@gmail.com
 
 # MARIADB
-MYSQL_USER=wordpress
-MYSQL_PASSWORD=6nE4F9N9GnWQ0pkJtuAgvMRiIZK9Oyr
+MYSQL_USER=tpouget
+MYSQL_PASSWORD=correcthorsebatterystaple
 MYSQL_DATABASE=wordpress
