--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,9 +1,7 @@
-# Deprecated ?
-#version: '3.8'
-
 services:
 
   mariadb:
+    container_name: mariadb
     build: requirements/mariadb
     env_file: .env
     networks:
@@ -13,6 +11,7 @@ services:
     restart: on-failure
 
   wordpress:
+    container_name: wordpress
     build: requirements/wordpress
     depends_on:
       - mariadb
@@ -28,12 +27,13 @@ services:
     restart: on-failure
 
   nginx:
+    container_name: nginx
     build: requirements/nginx
-    # Only service to expose a port to the outside
     depends_on:
       - wordpress
     networks:
       - docker_network
+    # Only service to expose a port to the outside
     ports:
       - "443:443"
     volumes:
@@ -41,8 +41,8 @@ services:
     restart: on-failure
     
   redis:
+    container_name: redis
     build: requirements/bonus/redis
-    # Only service to expose a port to the outside
     networks:
       - docker_network
     profiles:
