--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -26,7 +26,7 @@ RUN curl --output /usr/local/bin/wp  https://raw.githubusercontent.com/wp-cli/bu
 RUN chmod +x /usr/local/bin/wp
 
 # Download wordpress directory
-#RUN /usr/local/bin/wp --path=/var/www/wordpress --allow-root core download --force
+RUN /usr/local/bin/wp --path=/var/www/wordpress --allow-root core download --force
 
 # Copy the wordpress installation script
 COPY ./tools/wordpress_install.sh	/
