Added root pwd var to .env

--- a/srcs/.env
+++ b/srcs/.env
@@ -8,11 +8,12 @@ WP_ADMIN_PASSWORD=correcthorsebatterystaple
 WP_ADMIN_EMAIL=tpouget@student.42.fr
 
 # WORDPRESS SECOND USER
-WP_USER=justauser
+WP_USER=user
 WP_USER_PASSWORD=change_your_password_asap
-WP_USER_EMAIL=justauser@gmail.com
+WP_USER_EMAIL=user@gmail.com
 
 # MARIADB
 MYSQL_USER=tpouget
 MYSQL_PASSWORD=correcthorsebatterystaple
+MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=wordpress
