--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - docker_network
     volumes:
       - mariadb_volume:/var/lib/mysql
-    restart: on-failure
+    #restart: on-failure
 
   wordpress:
     container_name: wordpress
@@ -24,7 +24,7 @@ services:
       - docker_network
     volumes:
       - wordpress_volume:/var/www/wordpress
-    restart: on-failure
+    #restart: on-failure
 
   nginx:
     container_name: nginx
@@ -38,7 +38,7 @@ services:
       - "443:443"
     volumes:
       - wordpress_volume:/var/www/wordpress
-    restart: on-failure
+    #restart: on-failure
     
   redis:
     container_name: redis
@@ -47,7 +47,7 @@ services:
       - docker_network
     profiles:
       - bonus
-    restart: on-failure
+    #restart: on-failure
     
 networks:
   docker_network:
